welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:14: error: not found: value decalage
		var d = decalage
                        ^