welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	def tabColor(x:Int):Array[Color] = {
		var T = new Array[Color](x)
		for (i <- 0 to x-2) {
			T(i)=getCouleurSol();
			avance();
		}
		T(x-1) = getCouleurSol()
		for(i <- 0 to x-2) {recule()}
	return T
	}
	def rempCol(x:Int,T:Array[Color]) = {
		var d = decalage
		for (i <- 0+x to x-2+d) {
			setCouleurBrosse(T(i%x));
			baisseBrosse();
			leveBrosse();
			avance();
		}
		for (i <- 0 to x-2) {recule()}
	}
	
	val T = tabColor(getMondeHauteur)
	for (i <- 0 to getMondeLargeur) {
		gauche();
		avance();
		droite();
		val decalage = litMessage().toInt
		rempCol(getMondeHauteur(),T);
	}
	
}